--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>template view 123</h1>
+    <div>
+        <img src="/images/image.jpg" >
+    </div>
+    
 </body>
 </html>
