--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -30,8 +30,8 @@
                     <td><%= value.name %></td>
                     <td><%= value.email %></td>
                     <td>
-                        <button>Delete</button>
-                        <button>Edit</button>
+                        <button><a href="/delete-user/<%= value.id %>">DELETE</a></button>
+                        <button><a href="/update/<%= value.id %>">Edit</a></button>
                     </td>
                 </tr>
             <% }) %>
