--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -10,21 +10,23 @@
 <body>
     <div class="topnav">
         <a href="/">Home</a>
-        <a class="active" href="/create">Create Usser</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/create">Create User</a>
     </div>
     <div class="form">
-        <form action="/create-user" method="post">
+        <form action="/create-user" method="post" enctype="multipart/form-data"> <!-- Thêm enctype -->
             <fieldset>
                 <legend>Form add user</legend>
                 <div class="input-group">
                     <label for="">Email :</label>
-                    <input type="text" name="email">
+                    <input type="text" name="email" required> <!-- Thêm required -->
                 </div>
                 <div class="input-group">
                     <label for="">Name :</label>
-                    <input type="text" name="name">
+                    <input type="text" name="name" required> <!-- Thêm required -->
+                </div>
+                <div class="input-group">
+                    <label for="">Profile Picture:</label>
+                    <input type="file" name="file" accept="image/*" required> <!-- Thêm input file -->
                 </div>
                 <div>
                     <button>Save</button>
