--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -11,8 +11,6 @@
     <div class="topnav">
         <a class="active" href="/">Home</a>
         <a href="/create">Create Usser</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
     </div>
     <table border="1px">
         <thead>
@@ -20,6 +18,7 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Email</th>
+                <th>Image</th>
                 <th>ACtion</th>
             </tr>
         </thead>
@@ -29,6 +28,7 @@
                     <td><%= value.id %></td>
                     <td><%= value.name %></td>
                     <td><%= value.email %></td>
+                    <td><img src="/images/<%= value.file %>" alt="Profile Picture" width="100" height="100"></td>
                     <td>
                         <button><a href="/delete-user/<%= value.id %>">DELETE</a></button>
                         <button><a href="/update/<%= value.id %>">Edit</a></button>
@@ -37,5 +37,9 @@
             <% }) %>
         </tbody>
     </table>
+
+    <div>
+        123
+    </div>
 </body>
 </html>
