--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -11,6 +11,7 @@
     <div class="topnav">
         <a class="active" href="/">Home</a>
         <a href="/create">Create Usser</a>
+        <a href="/login">Login</a>
     </div>
     <table border="1px">
         <thead>
@@ -18,6 +19,7 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Email</th>
+                <th>Password</th>
                 <th>Image</th>
                 <th>ACtion</th>
             </tr>
@@ -28,6 +30,7 @@
                     <td><%= value.id %></td>
                     <td><%= value.name %></td>
                     <td><%= value.email %></td>
+                    <td><%= value.password %></td>
                     <td><img src="/images/<%= value.file %>" alt="Profile Picture" width="100" height="100"></td>
                     <td>
                         <button><a href="/delete-user/<%= value.id %>">DELETE</a></button>
@@ -38,8 +41,5 @@
         </tbody>
     </table>
 
-    <div>
-        123
-    </div>
 </body>
 </html>
